--- a/aqua_purchase_customization/views/purchase_view.xml
+++ b/aqua_purchase_customization/views/purchase_view.xml
@@ -80,8 +80,7 @@
 									<field name="product_uom_category_id" invisible="1" />
 									<field name="invoice_lines" invisible="1" />
 									<field name="sequence" widget="handle" />
-									<field name="product_id" required="1" force_save="1" options="{'no_create': True}"/>
-<!--									<field name="product_id" domain="[('is_aqua_product','=',True)]" required="1" force_save="1" options="{'no_create': True, 'no_create_edit': True,'no_open': True}"/>-->
+									<field name="product_id" domain="[('is_aqua_product','=',True)]" required="1" force_save="1" options="{'no_create': True, 'no_create_edit': True,'no_open': True}"/>
 									<field name="name" widget="section_and_note_text" />
 									<field name="date_planned" invisible="1"  attrs="{'required': [('display_type', '=', False)]}" force_save="1" />
 									<field name="account_analytic_id" invisible="1"  context="{'default_partner_id':parent.partner_id}" groups="analytic.group_analytic_accounting" domain="['|', ('company_id', '=', False), ('company_id', '=', parent.company_id)]" />
