--- a/aqua_water_base/views/res_partner.xml
+++ b/aqua_water_base/views/res_partner.xml
@@ -9,7 +9,7 @@
                     <field name="name"/>
                     <field name="phone"/>
                     <field name="email"/>
-                    <field name="vat" string="VAT"/>
+                    <field name="vat" string="GSTIN"/>
                 </tree>
             </field>
         </record>
@@ -46,7 +46,7 @@
 	                      	<field name="warehouse_id" required="1" options="{'no_create': True, 'no_create_edit': True,'no_open': True}" attrs="{'readonly':[('is_branch_readonly','=',True)]}"/>
                             <field name="phone" widget="phone" />
                             <field name="email" widget="email" context="{'gravatar_image': True}" />
-                            <field name="vat" placeholder="e.g. BE0477472701" string="VAT" />
+                            <field name="vat" placeholder="e.g. BE0477472701" string="GSTIN" />
 							<field name="is_branch_readonly" invisible="1"/>
 						</group>
                   		</group>
@@ -68,7 +68,7 @@
 					<field name="name" string="Name"/>
 					<field name="mobile" string="Mobile"/>
 					<field name="email" string="Email"/>
-					<field name="vat" string="VAT"/>
+					<field name="vat" string="GSTIN"/>
 				</search>
 			</field>
 		</record>
