--- a/aqua_sale_customization/views/sale_order.xml
+++ b/aqua_sale_customization/views/sale_order.xml
@@ -48,7 +48,8 @@
 						<group>
 							<group>
 								<field name="aqua_sale_type" required="1" attrs="{'readonly': [('state', 'not in', ['draft'])]}"/>
-								<field name="partner_id" options="{'no_open':True,'no_create': True}" domain="[('is_aqua_customer','=',True)]" attrs="{'readonly': [('state', 'not in', ['draft'])]}"/>
+								<field name="partner_id" options="{'no_open':True,'no_create': True}"  domain="[('customer_rank','>',0)]" attrs="{'readonly': [('state', 'not in', ['draft'])]}"/>
+<!--								<field name="partner_id" options="{'no_open':True,'no_create': True}" domain="[('is_aqua_customer','=',True)]" attrs="{'readonly': [('state', 'not in', ['draft'])]}"/>-->
 								<field name="warehouse_id" required="1" attrs="{'readonly': ['|',('is_branch_readonly','=',True),('state', 'not in', ['draft'])]}" options="{'no_create': True, 'no_create_edit': True,'no_open': True}"/>
 								<field name="is_branch_readonly" invisible="1"/>
 								<field name="is_aqua_sale" invisible="1"/>
@@ -72,7 +73,8 @@
 										<field name="display_type" invisible="1" />
 										<field name="product_uom_category_id" invisible="1" />
 										<field name="product_updatable" invisible="1" />
-										<field name="product_id" force_save="1" domain="[('is_aqua_product','=',True)]" required="1" options="{'no_create': True, 'no_create_edit': True,'no_open': True}"/>
+<!--										<field name="product_id" force_save="1" domain="[('is_aqua_product','=',True)]" required="1" options="{'no_create': True, 'no_create_edit': True,'no_open': True}"/>-->
+										<field name="product_id" force_save="1" required="1" options="{'no_create': True, 'no_create_edit': True,'no_open': True}"/>
 										<field name="coupon_ids" domain="[('status','=','open')]" widget="many2many_tags" attrs="{'required': [('parent.aqua_sale_type', '!=', 'internal')],'column_invisible': [('parent.aqua_sale_type', '=', 'internal')]}"/>
 										<field name="product_template_id" string="Product" invisible="1"/>
 										<field name="name" />
