--- a/aqua_water_base/views/menu.xml
+++ b/aqua_water_base/views/menu.xml
@@ -1,21 +1,22 @@
 <odoo>
-	<data>
-		<menuitem id="aqua_water_menu_root" 
-			name="Branch" sequence="1"
-			web_icon="aqua_water_base,static/description/aqua.png"
-			groups="aqua_water_base.aqua_water_base_root_menu_access_group"
-			/>
-			
-			<menuitem id="aqua_water_branch_menu" parent="aqua_water_menu_root"
-			name="Branch" sequence="1" action="aqua_water_base.action_aqua_branch"/>
-		<menuitem id="aqua_water_customer_coupon_root"
-			name="Customer Coupon" groups="aqua_water_base.aqua_water_base_root_menu_access_group" sequence="2" action="aqua_water_base.action_aqua_customer_coupon"/>
-			<menuitem id="aqua_water_customer_coupon_menu" parent="aqua_water_customer_coupon_root"
-			name="Customer Coupon" sequence="1" action="aqua_water_base.action_aqua_customer_coupon"/>
-			<menuitem id="aqua_water_configuration_menu" parent="aqua_water_customer_coupon_root"
-			name="Configuration" sequence="2" />
-			<menuitem id="aqua_water_customer_menu" parent="aqua_water_configuration_menu"
-			name="Customer" sequence="1" action="aqua_water_base.aqua_customer_action"/>
-	
-	</data>
+    <data>
+        <menuitem id="aqua_water_menu_root"
+                  name="Branch" sequence="1"
+                  web_icon="aqua_water_base,static/description/aqua.png"
+                  groups="aqua_water_base.aqua_water_base_root_menu_access_group"
+        />
+
+        <menuitem id="aqua_water_branch_menu" parent="aqua_water_menu_root"
+                  name="Branch" sequence="1" action="aqua_water_base.action_aqua_branch"/>
+        <menuitem id="aqua_water_customer_coupon_root"
+                  name="Customer Coupon" groups="aqua_water_base.aqua_water_base_root_menu_access_group" sequence="2"
+                  action="aqua_water_base.action_aqua_customer_coupon"/>
+        <menuitem id="aqua_water_customer_coupon_menu" parent="aqua_water_customer_coupon_root"
+                  name="Customer Coupon" sequence="1" action="aqua_water_base.action_aqua_customer_coupon"/>
+        <menuitem id="aqua_water_configuration_menu" parent="aqua_water_customer_coupon_root"
+                  name="Configuration" sequence="2"/>
+        <menuitem id="aqua_water_customer_menu" parent="aqua_water_configuration_menu"
+                  name="Customer" sequence="1" action="aqua_water_base.aqua_customer_action"/>
+
+    </data>
 </odoo>
