Chnages done in sale module

--- a/aqua_sale_customization/views/sale_order.xml
+++ b/aqua_sale_customization/views/sale_order.xml
@@ -8,6 +8,7 @@
 			<field name="arch" type="xml">
 				<tree delete="0" duplicate="0">
                     <field name="create_date"/>
+                    <field name="name"/>
                     <field name="partner_id" readonly="1"/>
                     <field name="user_id"/>
                     <field name="amount_untaxed" sum="Total Tax Excluded" widget="monetary" optional="hide"/>
