--- a/aqua_sale_customization/views/sale_order.xml
+++ b/aqua_sale_customization/views/sale_order.xml
@@ -7,6 +7,7 @@
 			<field name="priority" eval="100" />
 			<field name="arch" type="xml">
 				<tree delete="0" duplicate="0">
+					<field name="name"/>
 					<field name="create_date" />
 					<field name="partner_id" readonly="1" />
 					<field name="user_id" />
@@ -34,12 +35,16 @@
 						<field name="state" widget="statusbar" statusbar_visible="draft,sale" />
 					</header>
 					<sheet>
-						<!--                    <div class="oe_button_box" name="button_box">
-						<button type="object" name="action_view_delivery" class="oe_stat_button" icon="fa-truck" attrs="{'invisible': [('delivery_count', '=', 0)]}">
+						                    <div class="oe_button_box" name="button_box">
+						<button type="object"
+                        name="action_view_delivery"
+                        class="oe_stat_button"
+                        icon="fa-truck"
+                        attrs="{'invisible': [('delivery_count', '=', 0)]}" groups="stock.group_stock_user">
                         <field name="delivery_count" widget="statinfo" string="Delivery"/>
-						</button>
+                    </button>
                     </div>
--->
+
 						<div class="oe_title">
 							<h1>
 								<field name="name" readonly="1" />
