--- a/aqua_purchase_customization/views/vendor.xml
+++ b/aqua_purchase_customization/views/vendor.xml
@@ -21,22 +21,20 @@
             <field name="type">form</field>
             <field name="priority" eval="100"/>
             <field name="arch" type="xml">
-				<form string="Customer" delete="0" duplicate="0">
+				<form string="Vendors" delete="0" duplicate="0">
                 	<sheet>
-	                   		<div class="oe_button_box" name="button_box">
-	                            <button type="object" name="action_view_purchase_invoice"
-	                                    class="oe_stat_button"
-	                                    attrs="{'invisible':[('purchase_bill_count','=',0)]}"
-	                                    icon="fa-pencil-square-o"
-	                                    string="Purchase Bills">
-	                            </button>
-	                   		</div>
-                   	<div class="oe_title">
-                        <h1>
-                            <field name="name" default_focus="1" placeholder="Name" required="1"
-                            		/>
-                        </h1>
-                   	</div>
+						<div class="oe_button_box" name="button_box">
+							<button type="object" name="action_view_purchase_invoice"
+									class="oe_stat_button" icon="fa-pencil-square-o"
+									attrs="{'invisible':[('purchase_bill_count', '=', 0)]}">
+								<field name="purchase_due_amount" widget="statinfo" string="Due Amount"/>
+							</button>
+						</div>
+						<div class="oe_title">
+							<h1>
+								<field name="name" default_focus="1" placeholder="Name" required="1"/>
+							</h1>
+						</div>
                    	<group>
                         <group>
                             <label for="street" string="Address"/>
@@ -91,12 +89,10 @@
 	
 	
         <record id="aqua_vendor_action" model="ir.actions.act_window">
-			<field name="name">Vendor</field>
+			<field name="name">Vendors</field>
 			<field name="res_model">res.partner</field>
  			<field name="search_view_id" ref="aqua_res_vendor_search_view" />
-			<field name="context">{
-							"default_is_aqua_vendor":True}
-			</field>
+			<field name="context">{"default_is_aqua_vendor":True}</field>
 			<field name="domain">[('is_aqua_vendor','=',True)]</field>
   			<field name="view_ids" eval="[(5, 0, 0), 
 			     		(0, 0, {'view_mode': 'tree', 'view_id': ref('aqua_res_vendor_tree_view')}),
