--- a/aqua_sale_customization/views/menu.xml
+++ b/aqua_sale_customization/views/menu.xml
@@ -15,8 +15,11 @@
 			action="aqua_sale_customization.action_sale_aqua_account_move_view"/>
 			<menuitem id="aqua_sales_configuration_menu" parent="aqua_water_sales_root"
 			name="Master Data" sequence="4" />
+			<menuitem id="aqua_water_product_sales_menu" parent="aqua_sales_configuration_menu"
+			name="Products" sequence="1" action="aqua_water_base.action_aqua_water_product_view"/>
 			<menuitem id="aqua_sales_customer_menu" parent="aqua_sales_configuration_menu"
-			name="Customer" sequence="1" action="aqua_sale_customer_action"/>
+			name="Customer" sequence="2" action="aqua_sale_customer_action"/>
+
 			<menuitem id="aqua_water_stock_delivery_main_menu" parent="aqua_stock_customization.aqua_water_stock_root"
 			name="Delivery" sequence="3"
 			action="aqua_sale_customization.action_aqua_water_delivery"/>
