--- a/aqua_water_base/views/customer_coupon.xml
+++ b/aqua_water_base/views/customer_coupon.xml
@@ -18,12 +18,15 @@
 	                    </div>
 	                    <group>
 	                        <group>
-	                      		<field name="warehouse_id" required="1" options="{'no_create': True, 'no_create_edit': True,'no_open': True}" attrs="{'readonly':['|',('coupon_line_ids','!=',[]),('is_branch_readonly','=',True)]}"/>
+	                      		<field name="warehouse_id" required="1" options="{'no_create': True, 'no_create_edit': True,'no_open': True}" attrs="{'readonly':[('coupon_line_ids','!=',[])]}"/>
 	                      		<field name="customer_id" domain="[('is_aqua_customer','=',True)]" required="1" options="{'no_create': True, 'no_create_edit': True,'no_open': True}" attrs="{'readonly':[('coupon_line_ids','!=',[])]}"/>
 	                      		<field name="coupon_count" required="1" attrs="{'readonly':[('coupon_line_ids','!=',[])]}"/>
-	                      		<field name="coupon_number" required="1" attrs="{'readonly':[('coupon_line_ids','!=',[])]}"/>
 	                      		<field name="coupon_amount" required="1" attrs="{'readonly':[('coupon_line_ids','!=',[])]}"/>
-								<field name="is_branch_readonly" invisible="1"/>
+	                        </group>
+	                        <group>
+	                      		
+	                      		<field name="coupon_number" required="1" readonly="1"/>
+	                      		<field name="coupon_number_to" required="1" readonly="1"/>
 								<field name="register_payment" invisible="1"/>
 								<field name="payment_ids" readonly="1" widget="many2many_tags"/>
 								
@@ -73,6 +76,7 @@
 	                <field name="name"/>
               		<field name="customer_id"/>
               		<field name="coupon_count"/>
+              		<field name="warehouse_id"/>
                 </tree>
             </field>
         </record>
