--- a/aqua_water_base/views/res_partner.xml
+++ b/aqua_water_base/views/res_partner.xml
@@ -23,6 +23,14 @@
             <field name="arch" type="xml">
 				<form string="Customer" delete="0" duplicate="0">
                 	<sheet>
+					<div class="oe_button_box" name="button_box">
+						<button type="object" name="view_all_coupons"
+								class="oe_stat_button" icon="fa-light fa-tags"
+								attrs="{'invisible':[('coupon_count', '=', 0)]}"
+								string="Coupons">
+							<field name="coupon_count" widget="statinfo" string="Coupons" readonly="1" invisible="1"/>
+						</button>
+					</div>
                    	<div class="oe_title">
                         <h1>
                             <field name="name" default_focus="1" placeholder="Name" required="1"
@@ -44,11 +52,10 @@
                             </div>
                           	</group>
                        	<group>
-	                      	<field name="warehouse_id" required="1" options="{'no_create': True, 'no_create_edit': True,'no_open': True}" attrs="{'readonly':[('is_branch_readonly','=',True)]}"/>
+	                      	<field name="warehouse_id" options="{'no_create': True, 'no_create_edit': True,'no_open': True}" />
                             <field name="phone" widget="phone" />
                             <field name="email" widget="email" context="{'gravatar_image': True}" />
                             <field name="vat" placeholder="e.g. BE0477472701" string="GSTIN" />
-							<field name="is_branch_readonly" invisible="1"/>
 						</group>
                   		</group>
                     </sheet>
