--- a/aqua_purchase_customization/views/account_move.xml
+++ b/aqua_purchase_customization/views/account_move.xml
@@ -9,11 +9,24 @@
             		<header>
                         <button name="action_register_payment" id="account_invoice_payment_btn"
                                 type="object" class="oe_highlight" string="Register Payment"
+                                context="{'dont_redirect_to_payments': True}"
                                 attrs="{'invisible': ['|', '|', ('state', '!=', 'posted'), ('payment_state', 'not in', ('not_paid', 'partial')), ('move_type', 'not in', ('out_invoice', 'out_refund', 'in_invoice', 'in_refund', 'out_receipt', 'in_receipt'))]}"
                                 groups="aqua_water_base.aqua_water_base_ho_user_access_group"/>
                         <field name="state" widget="statusbar" statusbar_visible="draft,posted,cancel" readonly="1"/>
             		</header>
             		<sheet>
+					<div class="oe_button_box" name="button_box">
+						<button type="object" name="action_view_po"
+								class="oe_stat_button" icon="fa-pencil-square-o"
+								attrs="{'invisible':[('purchase_id', '=',False)]}">
+							<field name="purchase_id" widget="statinfo" readonly="1"/>
+						</button>
+						<button type="object" name="view_all_shipment"
+								class="oe_stat_button" icon="fa-pencil-square-o"
+								attrs="{'invisible':[('picking_count', '=',0)]}">
+							<field name="picking_count" widget="statinfo" string="Shipments" readonly="1"/>
+						</button>
+					</div>
 						<field name="move_type" />
             			<div class="oe_title">
 		            		<label for="name" class="oe_edit_only"/>
@@ -25,11 +38,14 @@
 	                        <group>
 	                      		<field name="partner_id" required="1" options="{'no_create': True, 'no_create_edit': True,'no_open': True}"/>
 	                      		<field name="ref"/>
+                                <field name="source_document"/>
 	                      		<field name="company_id" readonly="1" options="{'no_create': True, 'no_create_edit': True,'no_open': True}"/>
 	                        </group>
 	                        <group>
 	                      		<field name="invoice_date" required="1"/>
 	                      		<field name="date" required="1"/>
+		                    	<field name="po_attachment" filename="po_file_name" attrs="{'invisible': [('po_attachment', '=',False)]}"/>
+	        					<field name="po_file_name" invisible="1"/>
 	                        </group>
 	                    </group>
 	                    <field name="id" invisible="1"/>
@@ -87,6 +103,7 @@
 
                                             <field name="invoice_payments_widget" colspan="2" nolabel="1" widget="payment"/>
                                             <field name="amount_residual" class="oe_subtotal_footer_separator" attrs="{'invisible': [('state', '=', 'draft')]}"/>
+                                            <field name="vendor_due_amount" readonly="1"/>
                                         </group>
                                         <field name="invoice_outstanding_credits_debits_widget"
                                             class="oe_invoice_outstanding_credits_debits"
@@ -120,7 +137,8 @@
                     <field name="invoice_date_due" widget="remaining_days" optional="hide" attrs="{'invisible': [['payment_state', 'in', ('paid', 'in_payment', 'reversed')]]}"/>
                     <field name="invoice_origin" optional="hide" string="Source Document"/>
                     <field name="payment_reference" optional="hide" invisible="context.get('default_move_type') in ('out_invoice', 'out_refund','out_receipt')"/>
-                    <field name="ref" optional="hide"/>
+                    <field name="ref"/>
+                    <field name="source_document"/>
                     <field name="activity_ids" widget="list_activity" optional="hide"/>
                     <field name="invoice_user_id" optional="hide" string="Salesperson" widget="many2one_avatar_user"/>
                     <field name="company_id" groups="base.group_multi_company" options="{'no_create': True}" optional="hide"/>
@@ -157,6 +175,7 @@
 	                <field name="name"/>
 	          		<field name="partner_id"/>
 	          		<field name="ref"/>
+                    <field name="source_document"/>
               		<field name="invoice_date"/>
               		<field name="date"/>
 	            </search>
