--- a/aqua_purchase_customization/views/stock_move.xml
+++ b/aqua_purchase_customization/views/stock_move.xml
@@ -7,7 +7,7 @@
         <field name="inherit_id" ref="stock.view_stock_move_operations"/>
 		<field name="arch" type="xml">
 			<xpath expr="//form/group/group/field[@name='product_id']" position="after">
-				<field name="expiry_date" required="1"/>
+				<field name="expiry_date"/>
 			</xpath>
 		</field>
 		</record>
