--- a/aqua_sale_customization/views/account_move.xml
+++ b/aqua_sale_customization/views/account_move.xml
@@ -9,11 +9,24 @@
             		<header>
                         <button name="action_register_payment" id="account_invoice_payment_btn"
                                 type="object" class="oe_highlight" string="Register Payment"
+                                context="{'dont_redirect_to_payments': True}"
                                 attrs="{'invisible': ['|', '|', ('state', '!=', 'posted'), ('payment_state', 'not in', ('not_paid', 'partial')), ('move_type', 'not in', ('out_invoice', 'out_refund', 'in_invoice', 'in_refund', 'out_receipt', 'in_receipt'))]}"
                                 groups="aqua_water_base.aqua_water_base_ho_user_access_group"/>
                         <field name="state" widget="statusbar" statusbar_visible="draft,posted,cancel" readonly="1"/>
             		</header>
             		<sheet>
+					<div class="oe_button_box" name="button_box">
+						<button type="object" name="action_view_sale"
+								class="oe_stat_button" icon="fa-pencil-square-o"
+								attrs="{'invisible':[('aqua_sale_id', '=',False)]}">
+							<field name="aqua_sale_id" widget="statinfo" readonly="1"/>
+						</button>
+						<button type="object" name="view_all_sale_shipment"
+								class="oe_stat_button" icon="fa-pencil-square-o"
+								attrs="{'invisible':[('sale_picking_count', '=',0)]}">
+							<field name="sale_picking_count" readonly="1" widget="statinfo" string="Shipments"/>
+						</button>
+					</div>
 						<field name="move_type" />
             			<div class="oe_title">
 		            		<label for="name" class="oe_edit_only"/>
@@ -87,6 +100,7 @@
 
                                             <field name="invoice_payments_widget" colspan="2" nolabel="1" widget="payment"/>
                                             <field name="amount_residual" class="oe_subtotal_footer_separator" attrs="{'invisible': [('state', '=', 'draft')]}"/>
+                                            <field name="customer_due_amount" readonly="1"/>
                                         </group>
                                         <field name="invoice_outstanding_credits_debits_widget"
                                             class="oe_invoice_outstanding_credits_debits"
