--- a/aqua_sale_customization/views/customer.xml
+++ b/aqua_sale_customization/views/customer.xml
@@ -1,5 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
+
+	<record model="ir.ui.view" id="aqua_res_partner_form_view_inherited_sales">
+		<field name="name">aqua.res.partner.form</field>
+		<field name="model">res.partner</field>
+		<field name="type">form</field>
+		<field name="inherit_id" ref="aqua_water_base.aqua_res_partner_form_view"/>
+		<field name="arch" type="xml">
+			<xpath expr="//sheet/div[@name='button_box']" position="inside">
+				<button type="object" name="action_view_sale_invoice" class="oe_stat_button"
+						attrs="{'invisible':[('sale_bill_count','=',0)]}"
+						icon="fa-pencil-square-o">
+					<field name="sale_bill_count" widget="statinfo" string="Invoices"/>
+				</button>
+			</xpath>
+			<xpath expr="//sheet/group/group[2]" position="inside">
+				<field name="sale_due_amount" style="font-weight: bold;"
+					   attrs="{'invisible':[('sale_bill_count','=',0)]}"/>
+			</xpath>
+		</field>
+	</record>
+
 	<record model="ir.ui.view" id="aqua_sale_res_partner_tree_view">
             <field name="name">aqua.res.partner.tree</field>
             <field name="model">res.partner</field>
@@ -24,16 +45,21 @@
 				<form string="Customer" delete="0" duplicate="0">
                 	<sheet>
  	                   		<div class="oe_button_box" name="button_box">
+								<button type="object" name="view_all_coupons"
+									class="oe_stat_button" icon="fa-light fa-tags"
+											attrs="{'invisible':[('coupon_count', '=', 0)]}"
+											string="Coupons">
+										<field name="coupon_count" widget="statinfo" string="Coupons" readonly="1" invisible="1"/>
+								</button>
 	                            <button type="object" name="action_view_sale_invoice" class="oe_stat_button"
 	                                    attrs="{'invisible':[('sale_bill_count','=',0)]}"
 	                                    icon="fa-pencil-square-o">
-									<field name="sale_bill_count" widget="statinfo" string="Due Amount"/>
+									<field name="sale_bill_count" widget="statinfo" string="Invoices"/>
 	                            </button>
 	                   		</div>
                   	<div class="oe_title">
                         <h1>
-                            <field name="name" default_focus="1" placeholder="Name" required="1"
-                            		/>
+                            <field name="name" default_focus="1" placeholder="Name" required="1"/>
                         </h1>
                    	</div>
                    	<group>
@@ -51,13 +77,12 @@
                             </div>
                           	</group>
                        	<group>
-	                      	<field name="warehouse_id" required="1" options="{'no_create': True, 'no_create_edit': True,'no_open': True}" attrs="{'readonly':[('is_branch_readonly','=',True)]}"/>
+	                      	<field name="warehouse_id" options="{'no_create': True, 'no_create_edit': True,'no_open': True}"/>
                             <field name="phone" widget="phone" />
                             <field name="email" widget="email" context="{'gravatar_image': True}" />
                             <field name="vat" placeholder="e.g. BE0477472701" string="GSTIN" />
-							<field name="is_branch_readonly" invisible="1"/>
-							<field name="sale_due_amount" attrs="{'invisible':[('sale_bill_count','=',0)]}"/>
-							<field name="sale_bill_count" invisible="1"/>
+							<field name="sale_due_amount" style="font-weight: bold;"
+								   attrs="{'invisible':[('sale_bill_count','=',0)]}"/>
 						</group>
                   		</group>
                     </sheet>
