--- a/aqua_sale_customization/views/stock_picking.xml
+++ b/aqua_sale_customization/views/stock_picking.xml
@@ -14,8 +14,8 @@
 					<field name="scheduled_date" optional="show" widget="remaining_days" attrs="{'invisible':[('state', 'in', ('done', 'cancel'))]}" />
 					<field name="picking_type_code" invisible="1" />
 					<field name="origin" optional="show" />
-					<field name="backorder_id" optional="hide" />
-					<field name="picking_type_id" optional="hide" />
+					<field name="backorder_id" invisible="1" />
+					<field name="picking_type_id" invisible="1" />
 					<field name="state" optional="show" widget="badge" decoration-success="state == 'done'" decoration-info="state not in ('done', 'cancel', 'draft')" decoration-muted="state == 'draft'" />
 				</tree>
 			</field>
@@ -33,6 +33,18 @@
 						<field name="state" widget="statusbar" statusbar_visible="draft,confirmed,assigned,done" />
 					</header>
 					<sheet>
+					<div class="oe_button_box" name="button_box">
+						<button type="object" name="action_view_sale"
+								class="oe_stat_button" icon="fa-pencil-square-o"
+								attrs="{'invisible':[('aqua_sale_id', '=',False)]}">
+							<field name="aqua_sale_id" widget="statinfo" readonly="1"/>
+						</button>
+						<button type="object" name="action_view_delivery_invoice"
+								class="oe_stat_button" icon="fa-pencil-square-o"
+								attrs="{'invisible':[('invoice_id', '=',False)]}">
+							<field name="invoice_id" readonly="1" widget="statinfo" string="Bills"/>
+						</button>
+					</div>
 						<div class="oe_title">
 							<h1>
 								<field name="name" attrs="{'invisible': [('name','=','/')]}" />
@@ -58,14 +70,13 @@
 						<notebook>
 							<page string="Operations" name="operations">
 								<field name="immediate_transfer" invisible="1"/>
-                <field name="picking_type_code" invisible="1"/>
+                				<field name="picking_type_code" invisible="1"/>
 								<field name="is_locked" invisible="1"/>
 								<field name="picking_type_entire_packs" invisible="1"/>
 								<field name="show_operations" invisible="1" readonly="1"/>
-                            <field name="move_ids_without_package" mode="tree,kanban" attrs="{'readonly': ['&amp;', ('state', '=', 'done'), ('is_locked', '=', True)]}"
+                            	<field name="move_ids_without_package" mode="tree" readonly="1"
 								   context="{'default_company_id': company_id, 'default_date': scheduled_date, 'default_date_deadline': date_deadline, 'picking_type_code': picking_type_code, 'default_picking_id': id, 'form_view_ref':'stock.view_move_form', 'address_in_id': partner_id, 'default_picking_type_id': picking_type_id, 'default_location_id': location_id, 'default_location_dest_id': location_dest_id, 'default_partner_id': partner_id}" add-label="Add a Product">
-                                <tree decoration-danger="not parent.immediate_transfer and state != 'done' and quantity_done &gt; reserved_availability and show_reserved_availability" decoration-muted="scrapped == True or state == 'cancel' or (state == 'done' and is_locked == True)"
-									  string="Stock Moves" editable="bottom" delete="0" create="0">
+                                <tree string="Stock Moves" editable="bottom" delete="0" create="0">
                                     <field name="company_id" invisible="1"/>
                                     <field name="name" invisible="1"/>
                                     <field name="state" invisible="1" readonly="0"/>
@@ -85,36 +96,29 @@
                                     <field name="product_uom_category_id" invisible="1"/>
                                     <field name="has_tracking" invisible="1"/>
                                     <field name="display_assign_serial" invisible="1"/>
-                                    <field name="product_id" required="1" context="{'default_detailed_type': 'product'}" attrs="{'readonly': ['|', '&amp;', ('state', '!=', 'draft'), ('additional', '=', False), ('move_lines_count', '&gt;', 0)]}"/>
-                                    <field name="description_picking" string="Description" optional="hide"/>
-                                    <field name="date" optional="hide"/>
-                                    <field name="date_deadline" optional="hide"/>
+                                    <field name="product_id" required="1" readonly="1" options="{'no_create': True, 'no_create_edit': True,'no_open': True}"/>
+                                    <field name="description_picking" string="Description" invisible="1"/>
+                                    <field name="date" invisible="1"/>
+                                    <field name="date_deadline" invisible="1"/>
                                     <field name="is_initial_demand_editable" invisible="1"/>
                                     <field name="is_quantity_done_editable" invisible="1"/>
                                     <field name="product_packaging_id" groups="product.group_stock_packaging"/>
                                     <field name="product_uom_qty" string="Demand" attrs="{'column_invisible': [('parent.immediate_transfer', '=', True)], 'readonly': ['|', ('is_initial_demand_editable', '=', False), '&amp;', '&amp;', ('show_operations', '=', True), ('is_locked', '=', True), ('is_initial_demand_editable', '=', False)]}"/>
-                                    <button type="object" name="action_product_forecast_report" icon="fa-area-chart" attrs="{'invisible': ['|', ('forecast_availability', '&lt;', 0), '|', ('parent.immediate_transfer', '=', True), '&amp;', ('parent.picking_type_code', '=', 'outgoing'), ('state', '!=', 'draft')]}"/>
-                                    <button type="object" name="action_product_forecast_report" icon="fa-area-chart text-danger" attrs="{'invisible': ['|', ('forecast_availability', '&gt;=', 0), '|', ('parent.immediate_transfer', '=', True), '&amp;', ('parent.picking_type_code', '=', 'outgoing'), ('state', '!=', 'draft')]}"/>
-                                    <field name="forecast_expected_date" invisible="1"/>
-                                    <field name="forecast_availability" string="Reserved" attrs="{'column_invisible': ['|', '|', ('parent.state', 'in', ['draft', 'done']), ('parent.picking_type_code', '!=', 'outgoing'), ('parent.immediate_transfer', '=', True)]}" widget="forecast_widget"/>
-                                    <field name="reserved_availability" string="Reserved" attrs="{'column_invisible': ['|', '|', ('parent.state', 'in', ['draft', 'done']), ('parent.picking_type_code', 'in', ['incoming', 'outgoing']), ('parent.immediate_transfer', '=', True)]}"/>
+                                    <field name="forecast_availability" readonly="1"/>
                                     <field name="product_qty" invisible="1" readonly="1"/>
                                     <field name="quantity_done" string="Done" attrs="{'readonly': [('is_quantity_done_editable', '=', False)], 'column_invisible':[('parent.state', '=', 'draft'), ('parent.immediate_transfer', '=', False)]}"/>
                                     <field name="product_uom" attrs="{'readonly': [('state', '!=', 'draft'), ('additional', '=', False)]}" options="{'no_open': True, 'no_create': True}" string="Unit of Measure" groups="uom.group_uom"/>
-                                    <field name="lot_ids" widget="many2many_tags" groups="stock.group_production_lot" attrs="{'invisible': ['|', ('show_details_visible', '=', False), ('has_tracking', '!=', 'serial')]}" optional="hide" options="{'create': [('parent.use_create_lots', '=', True)]}" context="{'default_company_id': company_id, 'default_product_id': product_id, 'active_picking_id': parent.id}" domain="[('product_id','=',product_id)]"/>
-                                    <button name="action_show_details" type="object" icon="fa-list" width="0.1" attrs="{'invisible': [('show_details_visible', '=', False)]}" options="{&quot;warn&quot;: true}"/>
-                                    <button name="action_assign_serial" type="object" icon="fa-plus-square" width="0.1" role="img" title="Assign Serial Numbers" attrs="{'invisible': ['|', ('display_assign_serial', '=', False), ('show_operations', '=', False)]}"/>
+                                    <field name="lot_ids" invisible="1" widget="many2many_tags" options="{'no_create': True, 'no_create_edit': True,'no_open': True}" context="{'default_company_id': company_id, 'default_product_id': product_id, 'active_picking_id': parent.id}" domain="[('product_id','=',product_id)]"/>
+                                    <button name="action_show_details" type="object" icon="fa-list" width="0.1" attrs="{'invisible': [('parent.state', '=', 'done')]}"/>
                                 </tree>
                                 <form string="Stock Moves">
-                                    <header>
-                                        <field name="state" widget="statusbar"/>
-                                    </header>
                                     <group>
+										<field name="state"/> 
                                         <field name="product_uom_category_id" invisible="1"/>
                                         <field name="additional" invisible="1"/>
                                         <field name="move_lines_count" invisible="1"/>
                                         <field name="company_id" invisible="1"/>
-                                        <field name="product_id" required="1" attrs="{'readonly': ['|', '&amp;', ('state', '!=', 'draft'), ('additional', '=', False), ('move_lines_count', '&gt;', 0)]}"/>
+                                        <field name="product_id" options="{'no_create': True, 'no_create_edit': True,'no_open': True}"/>
                                         <field name="is_initial_demand_editable" invisible="1"/>
                                         <field name="is_quantity_done_editable" invisible="1"/>
                                         <field name="product_uom_qty" attrs="{'invisible': [('parent.immediate_transfer', '=', True)], 'readonly': [('is_initial_demand_editable', '=', False)]}"/>
