All changes Done

--- a/aqua_purchase_customization/views/purchase_view.xml
+++ b/aqua_purchase_customization/views/purchase_view.xml
@@ -6,7 +6,7 @@
             <field name="model">purchase.order</field>
             <field name="priority" eval="100"/>
             <field name="arch" type="xml">
-			<tree delete="0" duplicate="0">
+			<tree delete="0" duplicate="0" default_order="name desc">
                 <field name="name" string="Reference" readonly="1" />
                 <field name="partner_id"/>
                 <field name="partner_ref" />
@@ -16,7 +16,8 @@
                 <field name="amount_untaxed" sum="Total Untaxed amount" string="Untaxed" widget="monetary" optional="hide"/>
                 <field name="amount_total" sum="Total amount" widget="monetary" optional="show"/>
                 <field name="currency_id" invisible="1"/>
-				<field name="aqua_po_state"/>
+				<field name="aqua_po_state" widget="badge" decoration-success="aqua_po_state == 'confirmed'"
+					   decoration-info="state == 'draft'" decoration-danger="state == 'cancelled'"/>
                 <field name="state" invisible="1"/>
         	</tree>
             </field>
@@ -39,7 +40,8 @@
 					<button name="po_draft" states="cancel" string="Set to Draft" type="object" attrs="{'invisible':[('aqua_po_state','not in',['cancelled'])]}"/>
 					<button name="po_cancel" string="Cancel" type="object" attrs="{'invisible':[('aqua_po_state','not in',['draft'])]}"/>
 <!--					<field name="latest_picking_ref" attrs="{'invisible': [('latest_picking_ref', '=', '')]}"/>
--->					<field name="aqua_po_state" widget="statusbar" statusbar_visible="draft,confirmed,cancelled" readonly="1" />
+-->					<button name="action_rfq_send" states="purchase" string="Send PO by Email" type="object" context="{'send_rfq':False}" data-hotkey="g"/>
+					<field name="aqua_po_state" widget="statusbar" statusbar_visible="draft,confirmed,cancelled" readonly="1" />
 					<field name="state" invisible="1" />
 				</header>
 				<sheet>
