--- a/aqua_purchase_customization/views/account_move.xml
+++ b/aqua_purchase_customization/views/account_move.xml
@@ -12,6 +12,8 @@
                                 context="{'dont_redirect_to_payments': True}"
                                 attrs="{'invisible': ['|', '|', ('state', '!=', 'posted'), ('payment_state', 'not in', ('not_paid', 'partial')), ('move_type', 'not in', ('out_invoice', 'out_refund', 'in_invoice', 'in_refund', 'out_receipt', 'in_receipt'))]}"
                                 groups="aqua_water_base.aqua_water_base_ho_user_access_group"/>
+                        <button name="action_invoice_sent" type="object" string="Send &amp; Print" attrs="{'invisible':['|', '|', ('state', '!=', 'posted'), ('is_move_sent', '=', True), ('move_type', 'not in', ('out_invoice', 'out_refund'))]}" class="oe_highlight" data-hotkey="y"/>
+                        <button name="action_invoice_sent" type="object" string="Send &amp; Print" attrs="{'invisible':['|', '|', ('state', '!=', 'posted'), ('is_move_sent', '=', False), ('move_type', 'not in', ('out_invoice', 'out_refund', 'in_invoice', 'in_refund'))]}" data-hotkey="y"/>
                         <field name="state" widget="statusbar" statusbar_visible="draft,posted,cancel" readonly="1"/>
             		</header>
             		<sheet>
@@ -46,6 +48,7 @@
 	                      		<field name="date" required="1"/>
 		                    	<field name="po_attachment" filename="po_file_name" attrs="{'invisible': [('po_attachment', '=',False)]}"/>
 	        					<field name="po_file_name" invisible="1"/>
+                                <field name="is_move_sent" invisible="1"/>
 	                        </group>
 	                    </group>
 	                    <field name="id" invisible="1"/>
