--- a/aqua_sale_customization/views/account_move.xml
+++ b/aqua_sale_customization/views/account_move.xml
@@ -12,6 +12,8 @@
                                 context="{'dont_redirect_to_payments': True}"
                                 attrs="{'invisible': ['|', '|', ('state', '!=', 'posted'), ('payment_state', 'not in', ('not_paid', 'partial')), ('move_type', 'not in', ('out_invoice', 'out_refund', 'in_invoice', 'in_refund', 'out_receipt', 'in_receipt'))]}"
                                 groups="aqua_water_base.aqua_water_base_ho_user_access_group"/>
+                        <button name="action_invoice_sent" type="object" string="Send &amp; Print" attrs="{'invisible':['|', '|', ('state', '!=', 'posted'), ('is_move_sent', '=', True), ('move_type', 'not in', ('out_invoice', 'out_refund'))]}" class="oe_highlight" data-hotkey="y"/>
+                        <button name="action_invoice_sent" type="object" string="Send &amp; Print" attrs="{'invisible':['|', '|', ('state', '!=', 'posted'), ('is_move_sent', '=', False), ('move_type', 'not in', ('out_invoice', 'out_refund', 'in_invoice', 'in_refund'))]}" data-hotkey="y"/>
                         <field name="state" widget="statusbar" statusbar_visible="draft,posted,cancel" readonly="1"/>
             		</header>
             		<sheet>
@@ -48,6 +50,7 @@
 	                    <field name="id" invisible="1"/>
                         <field name="is_aqua_sale_bill" invisible="1"/>
                         <field name="payment_state" invisible="1"/>
+                        <field name="is_move_sent" invisible="1"/>
 	                    <notebook>
 		                    <page string="Invoice Line">
                                 <field name="invoice_line_ids" readonly="1">
