--- a/aqua_water_base/views/product.xml
+++ b/aqua_water_base/views/product.xml
@@ -7,7 +7,7 @@
 			<field name="arch" type="xml">
 				<tree delete="0" duplicate="0">
 					<field name="name" />
-					<field name="default_code" />
+					<field name="default_code" string="Product Code"/>
 					<field name="categ_id" />
 					<field name="uom_id"/>
 					<field name="standard_price" />
@@ -39,7 +39,7 @@
 						</div>
 						<group>
 							<group>
-								<field name="default_code" required="1"/>
+								<field name="default_code" required="1" string="Product Code"/>
 								<field name="supplier_taxes_id" string="Taxes" widget="many2many_tags" force_save="1" />
 								<field name="standard_price" string="Cost" widget='monetary' options="{'currency_field': 'cost_currency_id'}" />
 								<field name="barcode"/>
